--- a/files/tmux/dot_tmux.conf
+++ b/files/tmux/dot_tmux.conf
@@ -1,3 +1,9 @@
+
+
+set-window-option -g allow-rename off
+set-window-option -g automatic-rename off
+
+
 # scollback buffer
 set-option -g history-limit 999999
 
