--- a/files/tmux/dot_tmux.conf
+++ b/files/tmux/dot_tmux.conf
@@ -1,5 +1,4 @@
-
-
+set -g default-command 'export BASH_CONF="bash_profile" && exec /bin/bash'
 set-window-option -g allow-rename off
 set-window-option -g automatic-rename off
 
@@ -19,8 +18,8 @@ unbind '"'
 unbind %
 
 # borders
-set -g pane-border-fg green
-set -g pane-active-border-fg brightred
+set -g pane-border-style fg=green
+set -g pane-active-border-style fg=brightred
 
 # reload
 bind r source-file ~/.tmux.conf
